@@ -3,7 +3,7 @@ use strict;
 use warnings;
 
 use Test::More;
-use Math::Prime::Util::GMP qw/powint mulint addint subint divint modint divrem tdivrem absint negint lshiftint rshiftint rashiftint/;
+use Math::Prime::Util::GMP qw/powint mulint addint subint divint modint divceilint divrem tdivrem fdivrem cdivrem absint negint lshiftint rshiftint rashiftint/;
 use Math::BigInt;  # Don't use GMP so we don't have to work around bug
 
 my $use64 = (~0 > 4294967296 && 18446744073709550592 != ~0);
@@ -29,13 +29,13 @@ my @subints = (
   ["14888606332669627740937300680965976203","14888605897080617527808122501731945103","435589010213129178179234031100"],
 );
 
-my @quotients = (  # trunc, floor, euclidian
-  ["S + +", "9949242744253247", "64", "155456917878956", "155456917878956", "155456917878956"],
-  ["S - +", "-9949242744253247", "64", "-155456917878956", "-155456917878957", "-155456917878957"],
-  ["L + +",  "39458349850349850394853049583049",  "85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398579"],
-  ["L + -",  "39458349850349850394853049583049", "-85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579"],
-  ["L - +", "-39458349850349850394853049583049",  "85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398580"],
-  ["L - -", "-39458349850349850394853049583049", "-85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580"],
+my @quotients = (  # trunc, floor, ceil, euclidian
+  ["S + +", "9949242744253247", "64", "155456917878956", "155456917878956", "155456917878957", "155456917878956"],
+  ["S - +", "-9949242744253247", "64", "-155456917878956", "-155456917878957", "-155456917878956", "-155456917878957"],
+  ["L + +",  "39458349850349850394853049583049",  "85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580",  "459410982202026457344398579"],
+  ["L + -",  "39458349850349850394853049583049", "-85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579", "-459410982202026457344398579"],
+  ["L - +", "-39458349850349850394853049583049",  "85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579", "-459410982202026457344398580"],
+  ["L - -", "-39458349850349850394853049583049", "-85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580",  "459410982202026457344398580"],
 );
 
 my @negshifts = (
@@ -65,9 +65,12 @@ plan tests => 0
             + 1 + scalar(@subints)           # subint
             + 2 + 2                          # divint
             + 2 + 2                          # modint
+            + 2 + 1                          # divceilint
             + 2                              # divrem
             + 2                              # tdivrem
-            + 4 * scalar(@quotients)         # signed bigint division
+            + 2                              # fdivrem
+            + 2                              # cdivrem
+            + 7 * scalar(@quotients)         # signed bigint division
             + 4 + 3*scalar(@negshifts)       # shiftint
             + 1                              # absint
             + 1                              # negint
@@ -133,7 +136,7 @@ foreach my $r (@subints) {
 }
 
 ###### divint
-ok(!eval { divint(0,0); }, "divint(1,0)");
+ok(!eval { divint(0,0); }, "divint(0,0)");
 ok(!eval { divint(1,0); }, "divint(1,0)");
 
 # For negative inputs, the div and mod operations might be different than Perl's builtins.
@@ -149,30 +152,49 @@ is_deeply( [map { divint(1024,$_) } 1..1025], \@qpos1024, "divint(1024,x) for 1 
 is_deeply( [map { divint(-1024,$_) } 1..1025], \@qneg1024, "divint(-1024,x) for 1 .. 1025" );
 
 ###### modint
-ok(!eval { modint(0,0); }, "modint(1,0)");
+ok(!eval { modint(0,0); }, "modint(0,0)");
 ok(!eval { modint(1,0); }, "modint(1,0)");
 
 is_deeply( [map { modint(1024,$_) } 1..1025], \@rpos1024, "modint(1024,x) for 1 .. 1025" );
 is_deeply( [map { modint(-1024,$_) } 1..1025], \@rneg1024, "modint(-1024,x) for 1 .. 1025" );
 
+###### divceilint
+ok(!eval { divceilint(0,0); }, "divceilint(0,0)");
+ok(!eval { divceilint(1,0); }, "divceilint(1,0)");
+
+is_deeply([divceilint(7,3),divceilint(7,-3),divceilint(-7,3),divceilint(-7,-3)],
+          [3,-2,-2,3],
+          "divceilint with all signs of 7,3");
+
 ###### divrem
-ok(!eval { divrem(0,0); }, "divrem(1,0)");
+ok(!eval { divrem(0,0); }, "divrem(0,0)");
 ok(!eval { divrem(1,0); }, "divrem(1,0)");
 
 ###### tdivrem
-ok(!eval { tdivrem(0,0); }, "tdivrem(1,0)");
+ok(!eval { tdivrem(0,0); }, "tdivrem(0,0)");
 ok(!eval { tdivrem(1,0); }, "tdivrem(1,0)");
 
+###### fdivrem
+ok(!eval { fdivrem(0,0); }, "fdivrem(0,0)");
+ok(!eval { fdivrem(1,0); }, "fdivrem(1,0)");
 
-###### large values through divint, modint, divrem, tdivrem
+###### cdivrem
+ok(!eval { cdivrem(0,0); }, "cdivrem(0,0)");
+ok(!eval { cdivrem(1,0); }, "cdivrem(1,0)");
+
+###### large values through divint, divceilint, modint,
+######                      divrem, tdivrem, fdivrem, cdivrem
 for my $s (@quotients) {
-  my($signs, $n, $m, $qt, $qf, $qe) = @$s;
+  my($signs, $n, $m, $qt, $qf, $qc, $qe) = @$s;
   my($bn,$bm) = map { Math::BigInt->new($_) } ($n,$m);
-  my($rt, $rf, $re) = map { $bn - $bm * $_ } ($qt, $qf, $qe);
+  my($rt, $rf, $rc, $re) = map { $bn - $bm * $_ } ($qt, $qf, $qc, $qe);
   is( divint($n, $m), $qf, "large divint  $signs" );
   is( modint($n, $m), $rf, "large modint  $signs" );
+  is( divceilint($n, $m), $qc, "large divint  $signs" );
   is_deeply( [divrem($n, $m)], [$qe, $re], "large divrem  $signs" );
   is_deeply( [tdivrem($n, $m)], [$qt, $rt], "large tdivrem $signs" );
+  is_deeply( [fdivrem($n, $m)], [$qf, $rf], "large fdivrem $signs" );
+  is_deeply( [cdivrem($n, $m)], [$qc, $rc], "large cdivrem $signs" );
 }
 
 ###### lshiftint
